FIX: HTML structure, JS Dark Mode and SCSS bug

--- a/src/static/SCSS/partials/_globals.scss
+++ b/src/static/SCSS/partials/_globals.scss
@@ -27,7 +27,10 @@
 
     .dark-mode {
         background-color: #121212;
-        color: var(--white);
+
+        * {
+            color: var(--white);
+        }
     }
 }
 
